--- a/src/htdocs/css/features/_mainshock.scss
+++ b/src/htdocs/css/features/_mainshock.scss
@@ -219,8 +219,7 @@
       max-width: 100%;
     }
     img {
-      border-width: 2px;
-      border-style: solid;
+      border: 2px solid;
       border-radius: $button-border-radius;
       padding: 2px;
     }
@@ -275,8 +274,7 @@
 }
 
 .lightbox > img {
-  border-width: 4px;
-  border-style: solid;
+  border: 4px solid;
 }
 
 // @media only screen
