--- a/src/htdocs/css/leaflet/_overrides.scss
+++ b/src/htdocs/css/leaflet/_overrides.scss
@@ -163,6 +163,7 @@ $separator-color: color.scale($accent-color, $lightness: 80%);
 
   .leaflet-popup-content {
     color: $text-color;
+    font-size: 1rem;
     margin: .75rem 1rem;
 
     a {
