set MMI N/A border color

--- a/src/htdocs/css/features/_mainshock.scss
+++ b/src/htdocs/css/features/_mainshock.scss
@@ -234,6 +234,9 @@
 #summaryPane,
 .lightbox {
   img {
+    &.mmiN\/A {
+      border-color: $mmi-NAcolor;
+    }
     &.mmiI {
       border-color: $border-color-lighter;
     }
