--- a/src/htdocs/css/_mapPane.scss
+++ b/src/htdocs/css/_mapPane.scss
@@ -22,7 +22,7 @@
     }
   }
 
-  .content { // contains beachballs that are turned off in layer controller
+  .container { // contains beachballs that are turned off in layer controller
     display: none;
   }
 
