--- a/src/htdocs/css/_titleBar.scss
+++ b/src/htdocs/css/_titleBar.scss
@@ -45,7 +45,7 @@
   }
 }
 
-/* Toggle between user/utc time
+/* Toggle between user/UTC time
 --------------------------------------------- */
 
 body.user #titleBar time.utc,
