--- a/src/htdocs/css/_legendBar.scss
+++ b/src/htdocs/css/_legendBar.scss
@@ -48,6 +48,10 @@
   .fieldnotes {
     position: relative;
 
+    &.hide {
+      display: none;
+    }
+
     img {
       clip: rect(0, 25px, 30px, 0);
       position: absolute;
