--- a/src/htdocs/css/features/_pager.scss
+++ b/src/htdocs/css/features/_pager.scss
@@ -1,24 +1,6 @@
 @use '../variables' as *;
 
 #summaryPane {
-  .pager {
-    h4 {
-      margin-bottom: 0;
-
-      &:nth-of-type(2) {
-        margin-top: 1.5rem;
-      }
-    }
-
-    img {
-      max-width: 100%;
-    }
-
-    &.bubble {
-      padding: 1rem .5rem;
-    }
-  }
-
   .pager-exposures {
     table {
       margin: 1rem 0 0;
@@ -57,6 +39,24 @@
       line-height: 1.4;
       padding-bottom: .375rem;
       padding-top: .125rem;
+    }
+  }
+
+  .pager-loss {
+    h4 {
+      margin-bottom: 0;
+
+      &:nth-of-type(2) {
+        margin-top: 1.5rem;
+      }
+    }
+
+    img {
+      max-width: 100%;
+    }
+
+    &.bubble {
+      padding: 1rem .5rem;
     }
   }
 }
