add white bg behind close button

--- a/src/htdocs/css/_mixins.scss
+++ b/src/htdocs/css/_mixins.scss
@@ -1,7 +1,7 @@
 @use 'variables' as *;
 
 @mixin close() {
-  background: none;
+  background: #fff;
   border-radius: 50%;
   color: $accent-color;
   cursor: pointer;
