--- a/src/htdocs/css/_settingsBar.scss
+++ b/src/htdocs/css/_settingsBar.scss
@@ -25,7 +25,7 @@
     transition: opacity $effect-on-duration ease-out;
 
     &.hide {
-      height: .25rem;
+      height: 0;
       opacity: 0;
       transition: all $effect-off-duration-shorter ease-in;
       visibility: hidden;
@@ -33,7 +33,7 @@
   }
 
   .historical + p {
-    margin-top: 1.5rem;
+    margin-top: 2.5rem;
   }
 
   .required {
@@ -42,6 +42,6 @@
   }
 
   .timezone {
-    margin-bottom: 1rem;
+    margin-bottom: .5rem;
   }
 }
