tweak font colors

--- a/src/htdocs/css/features/_earthquakes.scss
+++ b/src/htdocs/css/features/_earthquakes.scss
@@ -135,6 +135,9 @@
           border-color: $text-color transparent;
         }
       }
+      &.sort-header:active {
+        color: $text-color-darker;
+      }
 
       em {
         font-family: $font-family-headers;
