add styles for new Lightbox content

--- a/src/htdocs/css/features/_mainshock.scss
+++ b/src/htdocs/css/features/_mainshock.scss
@@ -222,7 +222,6 @@
     img {
       border: 2px solid;
       border-radius: $button-border-radius;
-      padding: 2px;
     }
 
     div {
@@ -232,9 +231,15 @@
   }
 }
 
-#summaryPane,
-.lightbox {
+/* Lightboxes (and their thumbnail links)
+--------------------------------------------- */
+
+#dyfi,
+#shakemap,
+#summaryPane .thumbs {
   img {
+    padding: 2px;
+
     &.mmiN\/A {
       border-color: $mmi-NAcolor;
     }
@@ -277,11 +282,62 @@
   }
 }
 
-.lightbox > img {
-  border: 4px solid;
+#dyfi,
+#shakemap {
+  dl {
+    margin: 0;
+  }
+
+  i {
+    font-size: .875rem;
+    right: -1.125rem;
+    top: 0;
+  }
+
+  img {
+    border: 3px solid;
+    border-radius: $content-border-radius;
+    margin: 0 1px .375rem 0; // 1px: fix border rendering issue when scrolled (webkit)
+    max-height: 650px;
+    max-width: 100%;
+  }
+
+  p {
+    margin: 1.5rem 0 0;
+  }
+
+  .content {
+    align-items: flex-start;
+    display: flex;
+    gap: 1.5rem;
+    position: relative;
+  }
+
+  .details {
+    position: sticky;
+    top: 4rem;
+  }
+
+  .props {
+    em {
+      font-size: .75rem;
+      font-style: normal;
+      padding-left: .25rem;
+    }
+
+    span {
+      color: $text-color-lighter;
+    }
+  }
+
+  .stations {
+    margin-top: .5rem;
+  }
 }
 
-// Double-difference label (scope to body.mainshock so loader is not affected)
+/* Double-difference label (scope to body.mainshock so loader is not affected)
+--------------------------------------------- */
+
 body.mainshock #summaryPane .mainshock {
   h2 {
     flex-direction: column;
@@ -305,6 +361,17 @@ body.utc #summaryPane li.user {
   display: none;
 }
 
-// @media only screen
-//   and (max-width: 890px) {
-// }
+@media only screen
+and (max-width: 950px) {
+  #dyfi,
+  #shakemap {
+    img {
+      display: block;
+      margin: 0 auto;
+    }
+
+    .content {
+      flex-flow: row wrap;
+    }
+  }
+}
