--- a/src/htdocs/css/_sideBar.scss
+++ b/src/htdocs/css/_sideBar.scss
@@ -62,7 +62,7 @@
 
   .note {
     border-top: 1px solid $border-color-lighter;
-    margin-bottom: 0;
+    margin: 2.5rem 0 0;
     padding-top: .75rem;
   }
 }
