--- a/src/htdocs/css/_controls.scss
+++ b/src/htdocs/css/_controls.scss
@@ -127,7 +127,7 @@ button {
   }
 }
 
-/* 'Radio-bar' options
+/* RadioBar options
 --------------------------------------------- */
 
 .options {
@@ -173,7 +173,7 @@ button {
   }
 }
 
-/* Check boxes / radio inputs
+/* Check boxes, radio inputs
    (customized to Leaflet's html rendering)
 --------------------------------------------- */
 
@@ -259,7 +259,7 @@ input[type="number"] {
   }
 }
 
-/* Range inputs - adapted from:
+/* Range Sliders - adapted from:
    https://css-tricks.com/sliding-nightmare-understanding-range-input/
 --------------------------------------------- */
 
