make header spacing more consistent

--- a/src/htdocs/css/_sideBar.scss
+++ b/src/htdocs/css/_sideBar.scss
@@ -44,6 +44,10 @@
     display: none;
   }
 
+  ul.options {
+    margin-bottom: .25rem;
+  }
+
   .hide-link {
     color: $text-color;
     cursor: text;
