--- a/src/htdocs/css/_plotsPane.scss
+++ b/src/htdocs/css/_plotsPane.scss
@@ -5,6 +5,10 @@
     margin: 1.625rem 0 1.25rem;
   }
 
+  output:after {
+    content: '';
+  }
+
   .container {
     display: flex;
     flex-direction: column;
@@ -15,7 +19,7 @@
   }
 
   .hypocenters {
-    height: 83vh;
+    height: 76vh;
   }
 
   .js-plotly-plot {
