also toggle forecast start btwn utc/user time

--- a/src/htdocs/css/features/_forecast.scss
+++ b/src/htdocs/css/features/_forecast.scss
@@ -116,3 +116,11 @@
     }
   }
 }
+
+/* Toggle between user/UTC time
+--------------------------------------------- */
+
+body.user .forecast time.utc,
+body.utc .forecast time.user {
+  display: none;
+}
